# Lingus

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: docker-image.yml
lingus/: __init__.py  conversion.py  files.py  logging.py
